Add form and render content using jQuery

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "test": "nodemon --exec \"mocha server/**/*.test.js\"",
+    "start": "node server/server.js",
+    "test-watch": "npm test"
   },
   "engines": {
     "node": "6.9.2"
@@ -15,5 +16,10 @@
   "dependencies": {
     "express": "^4.15.2",
     "socket.io": "^1.7.3"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.3.0",
+    "nodemon": "^1.11.0"
   }
 }
